// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="mock-component-id"
    aria-live="polite"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-large brd-c-hzAqKw-dDDEqJ-variant-info"
    role="status"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <span
            data-mock="brickdoc-icon-Info"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="mock-component-id"
        >
          <div
            class="brd-c-ehEcEk"
          >
            OpenDoc
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            A Possibility in the Computing World Suppressed by Steve Jobs.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-kHdTvl brd-c-kHdTvl-eWWUXK-btnType-text brd-c-kHdTvl-lKjfQ-size-medium brd-c-PJLV"
          role="button"
          type="button"
        >
          <span
            data-mock="brickdoc-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageOnly should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="mock-component-id"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-dzGVlg-size-small brd-c-hzAqKw-dznTNE-variant-error"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <span
            data-mock="brickdoc-icon-CloseOne"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
        >
          <div
            class="brd-c-jUtCOJ"
            id="mock-component-id"
          >
            Oops! Something went wrong.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-kHdTvl brd-c-kHdTvl-eWWUXK-btnType-text brd-c-kHdTvl-lKjfQ-size-medium brd-c-PJLV"
          role="button"
          type="button"
        >
          <span
            data-mock="brickdoc-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WithAction should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="mock-component-id"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-large brd-c-hzAqKw-enADiq-variant-warning"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <span
            data-mock="brickdoc-icon-Caution"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="mock-component-id"
        >
          <div
            class="brd-c-ehEcEk"
          >
            Complete your profile
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            Please complete your profile to allow us recommend personalized content to you.
          </div>
        </div>
        <div
          class="brd-c-lkAHsY"
        >
          <button
            class="brd-c-kHdTvl brd-c-kHdTvl-foEQdY-btnType-primary brd-c-kHdTvl-lKjfQ-size-medium"
            role="button"
            type="button"
          >
            <span>
              View details
            </span>
          </button>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-kHdTvl brd-c-kHdTvl-eWWUXK-btnType-text brd-c-kHdTvl-lKjfQ-size-medium brd-c-PJLV"
          role="button"
          type="button"
        >
          <span
            data-mock="brickdoc-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
